# rain_o_meter

./: .gitignore  README.md  rain_o_meter_archi.drawio
backend/: .coveragerc  .dockerignore  .env.dist  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/src/: api.py  settings.py
backend/src/backend/aws/: dynamodb_service.py  key_value_db_repository.py
backend/src/backend/meteofrance/: data_file_repository.py  data_gouv_service.py  meteo_france_api_service.py
backend/src/core/: entities.py  exceptions.py  protocol.py  service.py
backend/tests/: conftest.py  test_api.py  test_main.py
backend/tests/backend/: conftest.py
backend/tests/backend/aws/: conftest.py  test_dynamodb_service.py  test_key_value_db_repository.py
backend/tests/backend/meteofrance/: conftest.py  test_data_file_repository.py  test_data_gouv_service.py  test_meteo_france_api_service.py
backend/tests/core/: test_service.py
backend/wiremock/__files/: hist_file_sample_unzip.csv  test_current_data_20250208_20250310.csv
backend/wiremock/mappings/: bulk_download.json  daily_fetch_computation.json  daily_launch_computation_mapping.json  token_mapping.json
notebooks/: README.md  fetch_current_data_vsc_notebook.py  fetch_hist_data_vsc_notebook.py  requirements.txt
