[project]
name = "backend"
version = "0.1.0"
description = "Rain o meter backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.37.29",
    "fastapi[standard]>=0.115.11",
    "mangum>=0.19.0",
    "mypy-boto3-dynamodb>=1.37.12",
    "pandera[polars]>=0.23.1",
    "polars>=1.25.2",
    "pydantic-settings>=2.8.1",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "moto>=5.1.3",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.0",
    "taskipy>=1.14.1",
]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.taskipy.tasks]
dev = { cmd = "fastapi dev src/main.py", help = "runs fastapi dev server" }
test = { cmd = "pytest", help = "runs all tests" }
format = { cmd = "ruff format", help = "formats code" }
lint = { cmd = "ruff check", help = "lints code" }
mypy = { cmd = "mypy src tests", help = "type checks code" }
quality = { cmd = "task format && task lint && task mypy", help = "runs all quality checks" }
