[project]
name = "backend"
version = "0.1.0"
description = "Rain o meter backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp[speedups]>=3.11.18",
    "boto3>=1.37.29",
    "cachetools>=5.5.2",
    "fastapi[standard]>=0.115.11",
    "mangum>=0.19.0",
    "mypy-boto3-dynamodb>=1.37.12",
    "pandera[polars]>=0.23.1",
    "polars>=1.25.2",
    "pydantic-settings>=2.8.1",
]

[dependency-groups]
dev = [
    "aioresponses>=0.7.8",
    "anyio>=4.9.0",
    "freezegun>=1.5.1",
    "moto>=5.1.3",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.0",
    "taskipy>=1.14.1",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
addopts = [
    "--strict-markers",
    "--cov-config=.coveragerc",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-branch",
    "--cov-fail-under=100",
]

[tool.taskipy.tasks]
dev = { cmd = "fastapi dev src/main.py", help = "runs fastapi dev server" }
test = { cmd = "pytest", help = "runs all tests" }
format = { cmd = "ruff format", help = "formats code" }
lint = { cmd = "ruff check --fix", help = "lints code" }
mypy = { cmd = "mypy src tests", help = "type checks code" }  # OK I should add mypy
quality = { cmd = "task format && task lint", help = "runs all quality checks" }
