[project]
name = "backend"
version = "0.1.0"
description = "Rain o meter backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=14.1.0",
    "aiohttp[speedups]>=3.11.18",
    "anyio>=4.9.0",
    "async-lru>=2.0.5",
    "cachetools>=5.5.2",
    "fastapi[standard]>=0.115.11",
    "mangum>=0.19.0",
    "mypy-boto3-dynamodb>=1.37.12",
    "pandera[polars]>=0.23.1",
    "polars>=1.25.2",
    "pydantic-settings>=2.8.1",
]

[dependency-groups]
dev = [
    "aioresponses>=0.7.8",
    "freezegun>=1.5.1",
    "moto>=5.1.3",
    "pytest>=8.3.5",
    "pytest-aioboto3>=0.6.0",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.0",
    "taskipy>=1.14.1",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
addopts = [
    "--strict-markers",
    "--cov-config=.coveragerc",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-branch",
    "--cov-fail-under=100",
]

[tool.taskipy.tasks]
dev = { cmd = "uvicorn --app-dir ./src api:app --host 0.0.0.0 --port 8000 --reload", help = "runs fastapi dev server" }
test = { cmd = "pytest", help = "runs all tests" }
format = { cmd = "ruff format", help = "formats code" }
lint = { cmd = "ruff check --fix", help = "lints code" }
mypy = { cmd = "mypy src tests", help = "type checks code" }  # OK I should add mypy
quality = { cmd = "task format && task lint", help = "runs all quality checks" }

ddb_admin = { cmd = "dynamodb-admin --port 8003 --dynamo-endpoint http://localhost:8001", help = "Launch dynamo db admin for local compose debug"}
